--- a/index.html
+++ b/index.html
@@ -313,17 +313,17 @@
 			</div>
 		</div>
 		
-		<div class="section" style="padding: 20px; text-align: center;">
+		<div class="section" style="text-align: center;">
 			<h2 style="margin-bottom: 20px;">Contatti</h2>
 			<p>Siamo sempre disponibili per rispondere a qualsiasi richiesta di informazioni. Non esitate a contattarci attraverso i nostri canali disponibili qui di seguito.</p>
-			<div class="contact-container" style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1200px; margin-left: auto; margin-right: auto;">
+			<div class="contact-container" style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1200px; margin-left: auto; margin-right: auto; margin-top: 40px;">
 				<div class="contact-info" style="flex: 1 1 300px; text-align: center; margin-right: 20px;">
-					<img src="images/chiama.jpg" alt="chiama" style="max-width: 100%; height: auto; margin-top: auto; max-width: 400px;">
+					<img src="images/chiama.jpg" alt="chiama" style="width: 75%; height: auto; margin-top: auto;">
 				</div>
-				<div class="contact-buttons" style="flex: 1 1 300px; display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 20px;">
+				<div class="custom-column" style="flex: 1 1 300px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
 					<a href="https://wa.me/393482595855?text=Vorrei%20pi%C3%B9%20informazioni%20sul%20vostro%20servizio" class="btn" style="margin-bottom: 30px; width: 300px;">Mandaci un WhatsApp</a>
 					<a href="tel:+393482595855" class="btn" style="margin-bottom: 30px; width: 300px;">Chiamaci Subito</a>
-					<a href="mailto:tapognaniriccardo@gmail.com?cc=goldenopinion.5star@gmail.com&subject=Info" class="btn" style="margin-bottom: 30px; width: 300px;">Mandaci una Mail</a>
+					<a href="mailto:tapognaniriccardo@gmail.com?cc=goldenopinion.5star@gmail.com&subject=Info" class="btn" style="margin-bottom: 0px; width: 300px;">Mandaci una Mail</a>
 				</div>
 			</div>
 		</div>
@@ -339,11 +339,11 @@
 			}
 		</style>
 
+    </div>
         <div class="footer">
             <p>Mail: <a href="mailto:tapognaniriccardo@gmail.com?cc=goldenopinion.5star@gmail.com&subject=Info" class="contact-link">tapognaniriccardo@gmail.com</a><br>
 			Cell: <a href="tel:+393482595855" class="contact-link">+39 3482595855</a></p>
             <a href="Privacy.html" class="footer-link">Privacy Policy</a>
         </div>
-    </div>
 </body>
 </html>
