--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     Il tuo browser non supporta il tag video.
                 </video>
             </div>
-			   <a href="https://tapo94.github.io/WebStudioTapognani/Prenotazioni.html" class="btn">PRENOTA UNA PROVA GRATUITA</a>
+			   <a href="Prenotazioni.html" class="btn">PRENOTA UNA PROVA GRATUITA</a>
 			</div>
 		</body>
 		
@@ -266,7 +266,7 @@
 					<h2>Consulenza Tecnica</h2>
 					<p>Contattaci per scoprire come Learn-UP può arricchire la tua offerta formativa e migliorare l'esperienza dei tuoi studenti.</p>
 					<img src="images/consulenza-tecnica.jpg" alt="Consulenza Tecnica" class="custom-img" style="max-width:100%">
-					<a href="https://tapo94.github.io/WebStudioTapognani/Prenotazioni.html" class="btn">PRENOTA UNA PROVA GRATUITA</a>
+					<a href="Prenotazioni.html" class="btn">PRENOTA UNA PROVA GRATUITA</a>
 				</div>
 			</div>
 		</body>
